backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceSchedule__c/Hyrto_ServiceSchedule__c.object-meta.xml
<CustomObject>
    <label>Serviceschema</label>
    <pluralLabel>Servicescheman</pluralLabel>
    <nameField>
        <displayFormat>SCH-{0000}</displayFormat>
        <label>Schema-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>