backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceSchedule__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <label>Faktiskt datum</label>
    <type>DateTime</type>
</CustomField>