backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceSchedule__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <label>Hubb</label>
    <type>Lookup</type>
    <referenceTo>Hyrto_Hub__c</referenceTo>
    <relationshipLabel>Servicescheman</relationshipLabel>
    <relationshipName>ServiceSchedules</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>