backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceSchedule__c/fields/PerformedBy__c.field-meta.xml
<CustomField>
    <fullName>PerformedBy__c</fullName>
    <label>Utfört av</label>
    <type>Text</type>
    <length>100</length>
</CustomField>