backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceSchedule__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <label>Planerat datum</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>