backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceSchedule__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>Service typ</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Tömning</fullName><default>false</default><label>Tömning</label></value>
            <value><fullName>Tömning + avtorkning</fullName><default>false</default><label>Tömning + avtorkning</label></value>
            <value><fullName>Full städning</fullName><default>false</default><label>Full städning</label></value>
            <value><fullName>Vattenpåfyllning</fullName><default>false</default><label>Vattenpåfyllning</label></value>
            <value><fullName>Underhåll</fullName><default>false</default><label>Underhåll</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>