backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceSchedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Planerad</fullName><default>true</default><label>Planerad</label></value>
            <value><fullName>Genomförd</fullName><default>false</default><label>Genomförd</label></value>
            <value><fullName>Avbokad</fullName><default>false</default><label>Avbokad</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>